src/test/deca/context/invalid/custom/object/decl_class_extends_static_method2.deca
class Vehicle {
    protected int wheels;

    void Vehicle(int wheels) {
        this.wheels = wheels;
    }

    void setWheels(int newWheels) {
        this.wheels = newWheels;
    }

    int getWheels(int newWheels) {
        return true;
    }
}

class Car extends Vehicle {
    protected int maxSpeed;
    float height;

    void Car(int maxSpeed, float height) {
        this.maxSpeed = maxSpeed;
        this.height = height;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed() {
        return maxSpeed;
    }

    float calculateFuel() {
        return (maxSpeed * height) / 10;
    }

    float distanceMax() {
        return this.calculateFuel() * height;
    }
}

{
    Car car1 = new Car();
    Vehicle vehicle1 = new Car();
    int maxSpeed1;

    car1.Car(200, 2.4);
    vehicle1.Car(210, 2.6);

    vehicle1.setWheels(2);
    maxSpeed1 = vehicle1.getMaxSpeed();
    print(maxSpeed1);
}